--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host=0.0.0.0 --poll=1",
+    "start": "npm install && ng serve --host=0.0.0.0 --poll=1",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
